--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cbd-tools",
   "displayName": "cbd-tools",
   "description": "Toolkit for cbd-framework",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "engines": {
     "vscode": "^1.42.0"
   },
@@ -33,6 +33,9 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run esbuild-base -- --minify",
+    "vscode:package": "vsce package",
+    "deploy": "vsce publish -p $VSCODE_MARKETPLACE_TOKEN",
+    "pub": "ts-node scripts/publish.ts",
     "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
     "esbuild": "npm run esbuild-base -- --sourcemap",
     "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
@@ -40,26 +43,36 @@
     "lint": "eslint src --ext ts",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
-    "test": "node ./out/test/runTest.js"
+    "test": "node ./out/test/runTest.js",
+    "prepare": "husky"
   },
   "devDependencies": {
-    "@orca-fe/eslint-config": "^2.3.3",
-    "@types/glob": "^8.1.0",
-    "@types/mocha": "^10.0.10",
-    "@types/node": "^22.13.4",
-    "@types/semver": "^7.5.8",
-    "@types/vscode": "^1.97.0",
-    "@typescript-eslint/eslint-plugin": "^8.24.1",
-    "@typescript-eslint/parser": "^8.24.1",
-    "esbuild": "^0.25.0",
-    "eslint": "^8.57.1",
-    "glob": "^11.0.1",
-    "mocha": "^11.1.0",
-    "typescript": "^5.7.3",
+    "@orca-fe/eslint-config": "^2.2.0",
+    "@types/glob": "^7.2.0",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^14.18.36",
+    "@types/semver": "^7.3.13",
+    "@types/vscode": "^1.42.0",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "@vscode/vsce": "^3.2.2",
+    "esbuild": "^0.17.5",
+    "eslint": "^8.33.0",
+    "glob": "^7.2.3",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
+    "mocha": "^7.2.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5",
     "vscode-test": "^1.6.1"
   },
   "dependencies": {
-    "change-case": "^5.4.4",
-    "semver": "^7.7.1"
+    "change-case": "^4.1.2",
+    "semver": "^7.3.8"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix"
+    ]
   }
 }
