--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "vscode:prepublish": "npm run esbuild-base -- --minify",
     "vscode:package": "vsce package",
-    "deploy": "vsce publish -p $VSCODE_MARKETPLACE_TOKEN",
+    "deploy": "vsce publish --no-dependencies  -p $VSCODE_MARKETPLACE_TOKEN",
     "pub": "ts-node scripts/publish.ts",
     "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
     "esbuild": "npm run esbuild-base -- --sourcemap",
