feat: remove cbd-cli dependencies and add quick-jump command

--- a/package.json
+++ b/package.json
@@ -15,21 +15,30 @@
     "type": "git",
     "url": "https://github.com/NicoKam/vscode-cbd-tools"
   },
-  "activationEvents": [
-    "onCommand:cbd.createTemplate"
-  ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "cbd.createTemplate",
-        "title": "新建(基于CBD模板)"
+        "command": "cbd-tools.create-template",
+        "title": "使用 CBD 模板创建"
+      },
+      {
+        "command": "cbd-tools.quick-jump-to-js",
+        "title": "快速跳转至 TS / JS 文件"
+      },
+      {
+        "command": "cbd-tools.quick-jump-to-css",
+        "title": "快速跳转至 CSS / LESS 文件"
+      },
+      {
+        "command": "cbd-tools.quick-jump-to-vue",
+        "title": "快速跳转至 VUE 文件"
       }
     ],
     "menus": {
       "explorer/context": [
         {
-          "command": "cbd.createTemplate",
+          "command": "cbd-tools.create-template",
           "group": "2_workspace"
         }
       ]
@@ -72,6 +81,7 @@
   },
   "dependencies": {
     "change-case": "^4.1.2",
+    "mkdirp": "^3.0.1",
     "semver": "^7.3.8"
   },
   "lint-staged": {
