--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   "scripts": {
     "c": "changeset",
     "vscode:prepublish": "npm run esbuild-base -- --minify",
-    "vscode:package": "vsce package",
+    "vscode:package": "vsce package --no-dependencies",
     "deploy": "vsce publish --no-dependencies  -p $VSCODE_MARKETPLACE_TOKEN",
     "pub": "ts-node scripts/publish.ts",
     "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
