--- a/package.json
+++ b/package.json
@@ -76,8 +76,7 @@
     "compile": "tsc -p ./",
     "lint": "eslint src --ext ts",
     "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
-    "test": "node ./out/test/runTest.js",
+    "test": "vitest",
     "prepare": "husky"
   },
   "devDependencies": {
@@ -90,6 +89,8 @@
     "@types/vscode": "^1.42.0",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
+    "@vitest/coverage-v8": "^3.1.1",
+    "@vitest/ui": "^3.1.1",
     "@vscode/vsce": "^3.2.2",
     "esbuild": "^0.17.5",
     "eslint": "^8.33.0",
@@ -99,7 +100,7 @@
     "mocha": "^7.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
-    "vscode-test": "^1.6.1"
+    "vitest": "^3.1.1"
   },
   "dependencies": {
     "change-case": "^4.1.2",
