ci: 更新发布工作流以使用包版本号
修改了 `.github/workflows/publish-vsce.yml` 文件，添加了获取包版本号的步骤，并将其用于发布标题。这样可以使发布标题与实际包版本号保持一致，避免混淆。

--- a/.github/workflows/publish-vsce.yml
+++ b/.github/workflows/publish-vsce.yml
@@ -35,12 +35,17 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
+      # 获取包版本号
+      - name: Get Package Version
+        id: package-version
+        run: echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
+
       - name: Create Release Pull Request or Publish
         id: changesets
         uses: changesets/action@master
         with:
           publish: pnpm run pub
-          title: 'Release v${{ steps.changesets.outputs.version }}'
+          title: 'Release v${{ steps.package-version.outputs.version }}'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VSCODE_MARKETPLACE_TOKEN: ${{ secrets.VSCODE_MARKETPLACE_TOKEN }}
