fix(.github/workflows): 修复 PR 标题更新条件错误
修复了在发布失败时错误地更新 PR 标题的问题，将条件从 `steps.changesets.outputs.published == 'true'` 改为 `steps.changesets.outputs.published != 'true'`

--- a/.github/workflows/publish-vsce.yml
+++ b/.github/workflows/publish-vsce.yml
@@ -46,7 +46,7 @@ jobs:
 
       # 更新 PR 标题为最新版本号
       - name: Update PR Title
-        if: steps.changesets.outputs.published == 'true'
+        if: steps.changesets.outputs.published != 'true'
         run: |
           gh pr edit ${{ github.event.pull_request.number }} --title "Release v${{ steps.changesets.outputs.publishedPackages[0].version }}"
         env:
