ci(workflow): 更新 PR 标题以使用 package.json 中的版本号
修改 GitHub Actions 工作流，从 package.json 中获取版本号并更新 PR 标题。此更改确保 PR 标题始终与 package.json 中的版本号一致，避免版本不一致的问题。

--- a/.github/workflows/publish-vsce.yml
+++ b/.github/workflows/publish-vsce.yml
@@ -44,10 +44,17 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VSCODE_MARKETPLACE_TOKEN: ${{ secrets.VSCODE_MARKETPLACE_TOKEN }}
 
+      # 从 package.json 获取版本号
+      - name: Get Version
+        id: get-version
+        if: steps.changesets.outputs.published != 'true'
+        run: |
+          echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
+
       # 更新 PR 标题为最新版本号
       - name: Update PR Title
         if: steps.changesets.outputs.published != 'true'
         run: |
-          gh pr edit ${{ github.event.pull_request.number }} --title "Release v${{ steps.changesets.outputs.publishedPackages[0].version }}"
+          gh pr edit ${{ github.event.pull_request.number }} --title "Release v${{ steps.get-version.outputs.version }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
