ci: 添加打印 changesets 输出的步骤
在 GitHub Actions 工作流中添加了打印 changesets 输出的步骤，以便更好地调试和监控发布过程。

--- a/.github/workflows/publish-vsce.yml
+++ b/.github/workflows/publish-vsce.yml
@@ -44,6 +44,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VSCODE_MARKETPLACE_TOKEN: ${{ secrets.VSCODE_MARKETPLACE_TOKEN }}
 
+      # 打印 changesets 输出
+      - name: Print Changesets Outputs
+        run: |
+          echo "published: ${{ steps.changesets.outputs.published }}"
+          echo "publishedPackages: ${{ steps.changesets.outputs.publishedPackages }}"
       # 从 package.json 获取版本号
       - name: Get Version
         id: get-version
