--- a/.github/workflows/publish-vsce.yml
+++ b/.github/workflows/publish-vsce.yml
@@ -48,6 +48,7 @@ jobs:
       - name: Print Changesets Outputs
         run: |
           echo "published: ${{ steps.changesets.outputs.published }}"
+          echo "customPublished: ${{ steps.changesets.outputs.customPublished }}"
           echo "publishedPackages: ${{ steps.changesets.outputs.publishedPackages }}"
       # 从 package.json 获取版本号
       - name: Get Version
