ci: 添加 cancel-in-progress 以中断正在运行的工作流
确保新的工作流会中断正在运行的工作流，避免并发冲突

--- a/.github/workflows/publish-vsce.yml
+++ b/.github/workflows/publish-vsce.yml
@@ -5,7 +5,10 @@ on:
     branches:
       - main
 
-concurrency: ${{ github.workflow }}-${{ github.ref }}
+# 添加 cancel-in-progress: true 来确保新的工作流会中断正在运行的工作流
+concurrency: 
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 permissions:
   contents: write
