Update package dependencies and improve quick jump functionality
- Updated VSCode engine requirement in package.json to ^1.74.0.
- Enhanced quick jump commands in register.ts to handle cases where no active text editor is present, providing user feedback for better error handling.
- Refactored quickJumpUtils.ts to utilize path module for improved file path handling.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Toolkit for cbd-framework",
   "version": "2.1.4",
   "engines": {
-    "vscode": "^1.42.0"
+    "vscode": "^1.74.0"
   },
   "icon": "assets/logo.png",
   "publisher": "kam",
@@ -20,7 +20,8 @@
     "onCommand:cbd-tools.create-template",
     "onCommand:cbd-tools.quick-jump-to-js",
     "onCommand:cbd-tools.quick-jump-to-css",
-    "onCommand:cbd-tools.quick-jump-to-vue"
+    "onCommand:cbd-tools.quick-jump-to-vue",
+    "onStartupFinished"
   ],
   "contributes": {
     "commands": [
